Improve README with Mermaid diagrams, tech stack, DB schema, and event payload docs (#130)
Add new sections: Tech Stack table with versions, Project Structure tree,
Database Schema (wallet_addresses + Redis data structures), Transfer Event
payload with full field reference, Environment Variables table, and navigation
links. Enhance existing sections with Mermaid architecture diagram, data flow
pipeline visualization, worker state machine diagram, and design decisions
with problem-solution rationale. All content verified against actual codebase.

Co-authored-by: Claude Opus 4.6 (1M context) <noreply@anthropic.com>